--- a/KTaseva/Views/Shared/_Layout.cshtml
+++ b/KTaseva/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - KTaseva</title>
+    <title>@ViewData["Title"]KTaseva</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -19,6 +19,9 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#">За мен</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Снимки</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Контакти</a>
