--- a/KTaseva/Views/Shared/_LoginPartial.cshtml
+++ b/KTaseva/Views/Shared/_LoginPartial.cshtml
@@ -17,10 +17,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
+            <a class="nav-link text-info" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Влез</a>
+            <a class="nav-link text-info" asp-area="Identity" asp-page="/Account/Login">Влез</a>
         </li>
     }
 </ul>
