Rename Project KTaseva.App

--- a/KTaseva.App/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using KTaseva.Areas.Identity
-@using KTaseva.Areas.Identity.Pages
+@using KTaseva.App.Areas.Identity
+@using KTaseva.App.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using KTaseva.Models
