--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using KTaseva
+﻿@using KTaseva.App
 @using KTaseva.Models
+@using KTaseva.App.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, KTaseva.App
