--- a/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
+++ b/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
@@ -1,13 +1,14 @@
-﻿<div class="">
-    <form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
-        <div class="form-group">
-            <input type="file" class="form-control-file" id="exampleFormControlFile1">
+﻿@model AdminInputAddPhoto
+
+<form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
+    <div class="form-group">
+        <input type="file" asp-for="@Model.Photo" class="form-control-file" id="exampleFormControlFile1">
+    </div>
+    <div class="form-group">
+        <div class="col-sm-10 col-sm-push-2">
+            <input type="submit" value="Добави" class="btn btn-info" />
         </div>
-        <div class="form-group">
-            <div class="col-sm-10 col-sm-push-2">
-                <input type="submit" value="Добави" class="btn btn-info" />
-            </div>
-        </div>
-    </form>
-</div>
+    </div>
+</form>
+
 
