--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using KTaseva.App
 @using KTaseva.Models
 @using KTaseva.App.Models
+@using KTaseva.ViewModels.Admin
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, KTaseva.App
