--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -2,5 +2,8 @@
 @using KTaseva.Models
 @using KTaseva.App.Models
 @using KTaseva.ViewModels.Admin
+@using KTaseva.ViewModels.Photos
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, KTaseva.App
