--- a/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
+++ b/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
@@ -1,14 +1,40 @@
 ﻿@model AdminInputAddPhoto
+@*<form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
+        <div class="form-group">
+            <input type="file" asp-for="@Model.Photo" class="form-control-file" id="exampleFormControlFile1">
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-push-2">
+                <input type="submit" value="Добави" class="btn btn-info" />
+            </div>
+        </div>
+    </form>*@
 
-<form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
-    <div class="form-group">
-        <input type="file" asp-for="@Model.Photo" class="form-control-file" id="exampleFormControlFile1">
-    </div>
-    <div class="form-group">
-        <div class="col-sm-10 col-sm-push-2">
-            <input type="submit" value="Добави" class="btn btn-info" />
+
+<div class="container py-5">
+    <div class="row py-4">
+        <div class="col-lg-6 mx-auto">
+            <form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
+                <!-- Upload image input-->
+                <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
+                    <input id="upload" type="file" asp-for="@Model.Photo" onchange="readURL(this);" class="form-control border-0">
+                    <label id="upload-label" for="upload" class="font-weight-light text-muted">Choose file</label>
+                    <div class="input-group-append">
+                        <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> <i class="fa fa-cloud-upload mr-2 text-muted"></i><small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
+                    </div>
+                </div>
+                <hr />
+                <div class="form-group">
+                    <div class="col-sm-10 col-sm-push-2">
+                        <input type="submit" value="Добави" class="btn btn-info" />
+                    </div>
+                </div>
+            </form>
+            <!-- Uploaded image area-->
+            <p class="font-italic text-white text-center">The image uploaded will be rendered inside the box below.</p>
+            <div class="image-area mt-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
         </div>
     </div>
-</form>
+</div>
 
-
+<script src="~/js/photo.js"></script>
