--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using KTaseva.App.Models
 @using KTaseva.ViewModels.Admin
 @using KTaseva.ViewModels.Photos
+@using KTaseva.ViewModels.Appointments
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
