--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -21,10 +21,13 @@
                             <a class="nav-link" href="#">За мен</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Снимки</a>
+                            <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Галерия</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Контакти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index">Запази Час</a>
                         </li>
                         <li class="nav-item">
                             <partial name="_LoginPartial" />
