Edit Appointments/Index View

--- a/KTaseva.App/Views/Appointments/Index.cshtml
+++ b/KTaseva.App/Views/Appointments/Index.cshtml
@@ -46,102 +46,10 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="/jquery.datetimepicker.css" />
-<script src="/jquery.js"></script>
-<script src="/build/jquery.datetimepicker.full.min.js"></script>
-
+@*DateTimePicker *@
 <input type="hidden" asp-for="@Model.BusyAppointment" id="GetBusy" />
-
-
-<script>
-    var getDateTime = [];
-    var currentData
-    //var dates = [];
-    //var hours = [];
-
-    var cDate;
-    var cHour;
-
-
-    let k = document.getElementById("GetBusy").value;
-    getDateTime = $.parseJSON(k);
-
-    //getDateTime.forEach(date => {
-    //    var splits = date.split(' ');
-
-    //    dates.push(splits[0]);
-    //    hours.push(splits[1]);
-    //});
-
-    $('#datetimepicker').datetimepicker({
-        allowTimes: [
-            '09:00',
-            '11:00',
-            '13:00',
-            '15:00',
-            '17:00'
-        ],
-        disabledDates: '2020/04/12',
-        formatDate: 'Y/m/d'
-    });
-    $.datetimepicker.setLocale('bg');
-
-    let isCreatedSpan = true;
-    let currentD;
-    let arr = [];
-
-    var div = document.getElementById("busyId");
-    var span = document.createElement("span");
-    var span2 = document.createElement("span");
-    span.setAttribute("class", "badge badge-warning");
-    span2.setAttribute("class", "badge badge-danger");
-
-
-    $("#datetimepicker").change(function () {
-        currentData = $("#datetimepicker").val();
-        let split = currentData.split(' ');
-        cDate = split[0];
-        cHour = split[1];
-
-        getDateTime.forEach(x => {
-            let datesHours = x.split(' ');
-            let d = datesHours[0];
-            let h = datesHours[1];
-
-            if (d === cDate) {
-                if (!arr.hasOwnProperty(d)) {
-                    arr[d] = new Array();
-                    arr[d].push(h);
-                }
-                else if (!arr[d].includes(h)) {
-                    arr[d].push(h);
-                }
-
-            }
-        });
-
-        if (currentD !== cDate) {
-            currentD = cDate;
-
-            for (const [key, value] of Object.entries(arr)) {
-                if (key === cDate) {
-                    span.textContent = "Заети часове:";
-                    span2.textContent = value;
-                    div.appendChild(span);
-                    div.appendChild(span2);
-                }
-                else if (!arr.hasOwnProperty(cDate)) {
-                    span.textContent = '';
-                    span2.textContent = '';
-                }
-            }
-        }
-    })
-
-
-
-</script>
-
-
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<link rel="stylesheet" type="text/css" href="~/css/jquery.datetimepicker.css" />
+<script src="~/js/jquery.js"></script>
+<script src="/build/jquery.datetimepicker.full.min.js"></script>
+<script src="js/calendar.js"></script>
