--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -1,9 +1,11 @@
 ﻿@using KTaseva.App
 @using KTaseva.Models
+@using KTaseva.Models.Enums
 @using KTaseva.App.Models
 @using KTaseva.ViewModels.Admin
 @using KTaseva.ViewModels.Photos
 @using KTaseva.ViewModels.Appointments
+
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
