Add Validation appointment

--- a/KTaseva.App/Views/Photos/Index.cshtml
+++ b/KTaseva.App/Views/Photos/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<PhotoViewModel>
 
-<div class="margin">
+<div class="">
     @if (this.User.IsInRole("Administrator"))
     {
         <vc:add-photo></vc:add-photo>
