--- a/KTaseva.App/wwwroot/css/site.css
+++ b/KTaseva.App/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿.masthead {
     height: 100vh;
     min-height: 500px;
-    background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+    background-image: url('https://res.cloudinary.com/ktaseva/image/upload/v1586102252/image_arqccl.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
