--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Галерия</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Контакти</a>
+                            <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">Контакти</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Add">Запази Час</a>
