--- a/KTaseva.App/Views/Contacts/Index.cshtml
+++ b/KTaseva.App/Views/Contacts/Index.cshtml
@@ -1,1 +1,20 @@
-﻿
+﻿<link rel="stylesheet" href="~/css/contacts.css" />
+
+<h1 class="text-center">Намери ме в Polly Art Atelie</h1>
+<div class="container">
+    <hr /><br />
+    <div class="row">
+        <div class="col-sm">
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe width="600" height="500" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%E2%80%9E%D0%AF%D0%B2%D0%BE%D1%80%E2%80%9C%2026%2C%20%D0%9B%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%2C%20%D0%92%D0%B0%D1%80%D0%BD%D0%B0&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+    </div>
+</div>
