Add info in Contacts view

--- a/KTaseva.App/Views/Contacts/Index.cshtml
+++ b/KTaseva.App/Views/Contacts/Index.cshtml
@@ -13,8 +13,19 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm">
-            One of three columns
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-header">
+                    Адрес и контакти
+                </div>
+                <div class="card-body">
+                    <p><i class="fas fa-map-marker-alt"></i> Варна, Левски, ул. Явор 26</p>
+                    <p><i class="far fa-clock"></i> Понеделник - Събота: 9:00 - 18:00ч.</p>
+                    <p><i class="fas fa-mobile-alt"></i> +359 87 951 9238</p>
+
+                    <a asp-area="" asp-controller="Appointments" asp-action="Add" class="btn btn-primary">Запази час</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
