--- a/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="margin d-flex justify-content-center">
+<div class="d-flex justify-content-center">
     <div class="row">
         <form id="account" method="post">
             <h4>Вход за потребители</h4>
