--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -6,8 +6,10 @@
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
-                <h1 class="font-weight-light">Vertically Centered Masthead Content</h1>
-                <p class="lead">A great starter layout for a landing page</p>
+                <h1 class="font-weight-light">Подари си миг красота, само за теб!</h1>
+                <p class="lead">И ръцете ти имат нужда от специална грижа, за да изглеждат перфектно!</p>
+                <a asp-area="" asp-controller="Appointments" asp-action="Add" class="btn btn-primary">Запази час</a>
+
             </div>
         </div>
     </div>
