--- a/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="d-flex justify-content-center">
     <div class="row">
         <form id="account" method="post">
-            <h4>Вход за потребители</h4>
+            <h4 class="text-center">Вход за потребители</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
