--- a/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="d-flex justify-content-center">
-    <div class="row">
+    <div class="col-md-2">
         <form id="account" method="post">
             <h4 class="text-center">Вход за потребители</h4>
             <hr />
@@ -34,10 +34,10 @@
             </div>
             <div class="form-group">
                 <p>
-                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                    <a id="forgot-password" asp-page="./ForgotPassword">Забравена парола</a>
                 </p>
                 <p>
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Регистрация</a>
                 </p>
             </div>
         </form>
