--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -15,10 +15,48 @@
     </div>
 </header>
 
-<!-- Page Content -->
-<section class="py-5">
+<div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h2 class="font-weight-light">Page Content</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ab nulla dolorum autem nisi officiis blanditiis voluptatem hic, assumenda aspernatur facere ipsam nemo ratione cumque magnam enim fugiat reprehenderit expedita.</p>
+        <h1 class="display-4 text-center">Процедури</h1>
     </div>
-</section>
+</div>
+
+@*<div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+        </div>
+    </div>*@
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-10">
+                        <div class="card-body">
+                            <h5 class="card-title">Маникюр (почистване и оформяне)</h5>
+                            <p class="card-text"></p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><i class="far fa-clock"></i> 30 мин.</li>
+                            <li class="list-group-item"><i class="far fa-money-bill-alt"></i> 35 лв.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
