Refactoring ProcedureService and PhotoService with automapper

--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using KTaseva.App
 @using KTaseva.Models
 @using KTaseva.Models.Enums
-@using KTaseva.App.Models
+@using KTaseva.ViewModels
 @using KTaseva.ViewModels.Admin
 @using KTaseva.ViewModels.Photos
 @using KTaseva.ViewModels.Appointments
