--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<ProcedureViewModel>
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -40,22 +41,25 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-10">
-                        <div class="card-body">
-                            <h5 class="card-title">Маникюр (почистване и оформяне)</h5>
-                            <p class="card-text"></p>
+        @foreach (var procedure in Model)
+        {
+            <div class="col-sm">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-10">
+                            <div class="card-body">
+                                <h5 class="card-title">@procedure.Name</h5>
+                                <p class="card-text"></p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="far fa-clock"></i> @procedure.Duration</li>
+                                <li class="list-group-item"><i class="far fa-money-bill-alt"></i> @procedure.Price</li>
+                            </ul>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="far fa-clock"></i> 30 мин.</li>
-                            <li class="list-group-item"><i class="far fa-money-bill-alt"></i> 35 лв.</li>
-                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 </div>
 
