--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -5,7 +5,7 @@
 @using KTaseva.ViewModels.Admin
 @using KTaseva.ViewModels.Photos
 @using KTaseva.ViewModels.Appointments
-
+@using KTaseva.ViewModels.Procedures
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
