--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -22,22 +22,13 @@
     </div>
 </div>
 
-@*<div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
-        <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-        </div>
-    </div>*@
+@if (this.User.IsInRole("Administrator"))
+{
+    <div class="d-flex justify-content-center">
+        <a type="button" asp-area="Admin" asp-controller="Procedures" asp-action="Add" class="btn btn-primary btn-sm">Добави нова процедура</a>
+    </div>
+    <hr />
+}
 
 <div class="container">
     <div class="row">
