--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -21,6 +21,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
+                        @if (this.User.IsInRole("Administrator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" asp-area="Admin" asp-controller="Home" asp-action="Index">Админ</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link" href="#">За мен</a>
                         </li>
