Add procedure aler,

--- a/KTaseva.App/Areas/Admin/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using KTaseva.App
+@using Microsoft.AspNetCore.Identity
+@using KTaseva.ViewModels.Admin
 
+@namespace KTaseva.App.Areas.Admin
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, KTaseva.App
