--- a/KTaseva.App/Areas/Admin/Views/Procedures/Add.cshtml
+++ b/KTaseva.App/Areas/Admin/Views/Procedures/Add.cshtml
@@ -1,19 +1,33 @@
-﻿<div class="container">
+﻿@model AdminProcedureInputModel
+
+
+@if (this.ViewData["alert"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @this.ViewData["alert"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+
+
+<div class="container col-md-4">
     <h1 class="text-center">Добавяне на нова процедура</h1>
-    <form asp-controller="Courses" asp-action="Create" method="post" class="form-horizontal">
+    <hr />
+    <form asp-controller="Procedures" asp-action="Add" method="post" class="form-horizontal">
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label>Име</label>
+            <input type="text" class="form-control" asp-for="@Model.Name">
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label>Времетраене</label>
+            <input type="time" class="form-control" asp-for="@Model.Duration">
         </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <div class="form-group">
+            <label>Цена</label>
+            <input type="number" class="form-control" asp-for="@Model.Price">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Добави</button>
     </form>
 </div>
