--- a/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
+++ b/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
@@ -1,15 +1,4 @@
-﻿@model AdminInputAddPhoto
-@*<form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
-        <div class="form-group">
-            <input type="file" asp-for="@Model.Photo" class="form-control-file" id="exampleFormControlFile1">
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10 col-sm-push-2">
-                <input type="submit" value="Добави" class="btn btn-info" />
-            </div>
-        </div>
-    </form>*@
-
+﻿@model AdminPhotoInputModel
 
 <div class="container py-5">
     <div class="row py-4">
