--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -27,14 +27,14 @@
     <hr />
 }
 
-<div class="container">
+<div class="container text-center">
     <div class="row">
         @foreach (var procedure in Model)
         {
-            <div class="col-sm">
-                <div class="card mb-3" style="max-width: 540px;">
+            <div class="col-md-4">
+                <div class="card mb-4" style="max-width: 540px;">
                     <div class="row no-gutters">
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="card-body">
                                 <h5 class="card-title">@procedure.Name</h5>
                                 <p class="card-text"></p>
@@ -50,5 +50,4 @@
         }
     </div>
 </div>
-
 
