--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link" href="#">За мен</a>
+                            <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="AboutMe">За мен</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Галерия</a>
