--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -1,14 +1,16 @@
 ﻿@model AppointmentInputModel
 
 
-
 <div class="container col-md-4">
     <h2 class="text-center">Запази час</h2>
     <form asp-area="" asp-controller="Appointments" asp-action="Add" method="post" class="form-horizontal">
-        <div class="form-group">
+
+        @* TODO *@
+
+        @*<div class="form-group">
             <label for="exampleFormControlSelect1">Процедура</label>
             <select class="form-control" asp-for="@Model.Procedure" asp-items="Html.GetEnumSelectList<Procedures>()"></select>
-        </div>
+        </div>*@ 
 
         <fieldset class="form-group row">
             <label class="col-sm-10">Имате ли стар лак за махане</label>
