Edit Admin/AdminAppointmentViewModel table

--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -16,13 +16,13 @@
             <div class="col-sm-10">
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="radio" asp-for="@Model.NailPolish" name="NailPolish" id="gridRadios1" value="Да" checked>
+                        <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="NailPolish" id="gridRadios1" value="Да" checked>
                         Да
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="radio" asp-for="@Model.NailPolish" name="NailPolish" id="gridRadios2" value="Не">
+                        <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="NailPolish" id="gridRadios2" value="Не">
                         Не
                     </label>
                 </div>
