--- a/KTaseva.App/Areas/Admin/Views/Home/Index.cshtml
+++ b/KTaseva.App/Areas/Admin/Views/Home/Index.cshtml
@@ -8,7 +8,9 @@
                 <th scope="col">#</th>
                 <th scope="col">Име</th>
                 <th scope="col">Фамилия</th>
+                <th scope="col">Тел.номер</th>
                 <th scope="col">Процедура</th>
+                <th scope="col">Стар лак</th>
                 <th scope="col">Дата</th>
                 <th scope="col">Час</th>
             </tr>
@@ -25,7 +27,9 @@
                     <th scope="row">@count</th>
                     <td>@appointment.FirstName</td>
                     <td>@appointment.LastName</td>
+                    <td>@appointment.PhoneNumber</td>
                     <td>@appointment.Procedure</td>
+                    <td>@appointment.OldPolish</td>
                     <td>@appointment.Date</td>
                     <td>@appointment.Hour</td>
                 </tr>
