--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -9,7 +9,7 @@
         <div class="form-group">
             <label for="exampleFormControlSelect1">Процедура</label>
             <select class="form-control" asp-for="@Model.Procedure" asp-items="@Model.Procedures"></select>
-        </div> 
+        </div>
 
         <fieldset class="form-group row">
             <label class="col-sm-10">Имате ли стар лак за махане</label>
@@ -29,7 +29,7 @@
             </div>
         </fieldset>
         <div class="form-group">
-            <label>Избери дата и час</label>
+            <label>Избери дата</label>
             <div id="busyId"></div>
             <input class="form-control" asp-for="@Model.Date" id="datetimepicker" type="text" />
             @if (ViewData["error"] != null)
@@ -39,6 +39,13 @@
                 </div>
             }
         </div>
+
+        <div class="form-group">
+            <label>Избери час</label>
+            <input class="form-control" asp-for="@Model.Hour" id="timepicker" type="text" />
+        </div>
+
+
         <hr />
         <div class="form-group">
             <div class="text-center">
@@ -47,6 +54,7 @@
             </div>
         </div>
         <input type="hidden" asp-for="@Model.BusyAppointment" id="GetBusy" />
+        <input type="hidden" asp-for="@Model.FreeAppointment" id="GetFree" />
     </form>
 </div>
 
@@ -55,4 +63,37 @@
 <link rel="stylesheet" type="text/css" href="~/css/jquery.datetimepicker.css" />
 <script src="~/js/jquery.js"></script>
 <script src="/build/jquery.datetimepicker.full.min.js"></script>
-<script src="/js/calendar.js"></script>
+@*<script src="/js/calendar.js"></script>*@
+
+<script>
+    $('#datetimepicker').datetimepicker({
+        timepicker: false,
+        dayOfWeekStart: 1,
+        format: 'd.m.Y'
+    });
+    $.datetimepicker.setLocale('bg');
+
+    var time = $('#timepicker').datetimepicker({
+        datepicker: false,
+        format: 'H:i'
+    });
+
+    let currentData;
+    let getFreeAppointment = document.getElementById("GetFree").value;
+    let freeAppointment = $.parseJSON(getFreeAppointment);
+
+    let freeHours;
+
+    $("#datetimepicker").change(function () {
+        currentData = $("#datetimepicker").val()
+
+        freeAppointment.forEach(x => {
+            if (x.includes(currentData)) {
+                let split = x.split(' ');
+                freeHours = split[1];
+
+                time.datetimepicker('setOptions', { allowTimes: [freeHours] });
+            }
+        });
+    });
+</script>
