--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -8,7 +8,7 @@
 
         <div class="form-group">
             <label for="exampleFormControlSelect1">Процедура</label>
-            <select class="form-control" asp-for="@Model.Procedure" asp-items="@Model.Procedures"></select>
+            <select class="form-control" asp-for="@Model.ProcedureId" asp-items="@Model.Procedures" id="procedureId"></select>
         </div>
 
         <fieldset class="form-group row">
@@ -53,8 +53,6 @@
                 <a asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
             </div>
         </div>
-        <input type="hidden" asp-for="@Model.BusyAppointment" id="GetBusy" />
-        <input type="hidden" asp-for="@Model.FreeAppointment" id="GetFree" />
     </form>
 </div>
 
@@ -65,57 +63,104 @@
 <script src="/build/jquery.datetimepicker.full.min.js"></script>
 @*<script src="/js/calendar.js"></script>*@
 
+
+<script src="/lib/signalr/dist/browser/signalr.min.js"></script>
+
 <script>
+    let procedure = document.getElementById("procedureId")
+    procedure.addEventListener("change", GetProcedure);
+    let procedureId = procedure.value;
+
+    function GetProcedure() {
+        procedureId = procedure.value;
+    };
+
     $('#datetimepicker').datetimepicker({
         timepicker: false,
         dayOfWeekStart: 1,
         format: 'd.m.Y'
     });
     $.datetimepicker.setLocale('bg');
-
     var time = $('#timepicker').datetimepicker({
         datepicker: false,
         format: 'H:i'
     });
 
-    let currentData;
-    let getFreeAppointment = document.getElementById("GetFree").value;
-    let freeAppointment = $.parseJSON(getFreeAppointment);
-
-    let freeDic = [];
-
-    freeAppointment.forEach(x => {
-        let split = x.split(' ');
-        let d = split[0];
-        let h = split[1];
-
-        if (!freeDic.hasOwnProperty(d)) {
-            freeDic[d] = new Array();
-            freeDic[d].push(h);
-        }
-        else if (!freeDic[d].includes(h)) {
-            freeDic[d].push(h);
-        }
-    });
+    let connection =
+        new signalR.HubConnectionBuilder()
+            .withUrl("/Appointments/Add")
+            .build();
+    connection.start();
 
     $("#datetimepicker").change(function () {
         currentData = $("#datetimepicker").val()
 
-        if (freeDic.hasOwnProperty(currentData)) {
+        connection.invoke("GetUpdateAppointment", currentData, procedureId);
 
-            let freeHours = freeDic[currentData];
-            time.datetimepicker('setOptions', { allowTimes: freeHours });
-        }
-        else {
-            time.datetimepicker('setOptions', {
-                allowTimes:
-                    [
-                        "09:00", "09:30",
-                        "10:00", "10:30",
-                        "11:00", "11:30",
-                    ]
+        connection.on("Get",
+            function (hours) {
+                time.datetimepicker('setOptions', {
+                    allowTimes: hours
+                });
             });
-        }
-
     });
 </script>
+
+
+
+
+
+@*<script>
+        $('#datetimepicker').datetimepicker({
+            timepicker: false,
+            dayOfWeekStart: 1,
+            format: 'd.m.Y'
+        });
+        $.datetimepicker.setLocale('bg');
+
+        var time = $('#timepicker').datetimepicker({
+            datepicker: false,
+            format: 'H:i'
+        });
+
+        let currentData;
+        let getFreeAppointment = document.getElementById("GetFree").value;
+        let freeAppointment = $.parseJSON(getFreeAppointment);
+
+        let freeDic = [];
+
+        freeAppointment.forEach(x => {
+            let split = x.split(' ');
+            let d = split[0];
+            let h = split[1];
+
+            if (!freeDic.hasOwnProperty(d)) {
+                freeDic[d] = new Array();
+                freeDic[d].push(h);
+            }
+            else if (!freeDic[d].includes(h)) {
+                freeDic[d].push(h);
+            }
+        });
+
+        $("#datetimepicker").change(function () {
+            currentData = $("#datetimepicker").val()
+
+            if (freeDic.hasOwnProperty(currentData)) {
+
+                let freeHours = freeDic[currentData];
+                time.datetimepicker('setOptions', { allowTimes: freeHours });
+            }
+            else {
+                time.datetimepicker('setOptions', {
+                    allowTimes:
+                        [
+                            "09:00", "09:30",
+                            "10:00", "10:30",
+                            "11:00", "11:30",
+                        ]
+                });
+            }
+
+        });
+    </script>*@
