Add Disabled Dates

--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -48,6 +48,7 @@
                 <a asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
             </div>
         </div>
+        <input type="hidden" asp-for="@Model.DisabledDates" id="disabledDates" />
     </form>
 </div>
 
